--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,10 @@
 data/hopsworks-api-key.txt
 data/aqi-api-key.txt
 
+
+data/
+!data/images/
+!data/images/**
 .env
 
 # Byte-compiled / optimized / DLL files
@@ -177,3 +181,6 @@ snurran.sh
 # pixi environments
 .pixi/*
 !.pixi/config.toml
+
+# Previous project (mlfs-book)
+mlfs-book/
